[metadata]
name = wormholeclient
version = 0.1
summary = Hybrid Cloud Hyper vm service client
description-file =
    README.rst

author = Huawei
home-page = http://www.huawei.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    wormholeclient

[install]
prefix=/
install-purelib=/usr/lib64/python2.6/site-packages/
